--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/SUN-LG/Request-Header-Parser-/issues"
   },
   "homepage": "https://github.com/SUN-LG/Request-Header-Parser-#readme",
-  "devDependencies": {
+  "dependencies": {
     "express": "^4.15.2"
   }
 }
